# continentes

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  SKILL.md  build_rs_cov.profraw  config.example.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: investigation.md  real-world-test.md
docs/plans/: 00-overview.md  01-plumbing.md  02-models-and-api.md  03-commands.md  04-output-formatting.md  05-tests.md  06-polish.md
src/: categories.rs  config.rs  error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs  models.rs  scraper.rs
src/commands/: browse.rs  categories.rs  flyers.rs  mod.rs  product.rs  search.rs  stores.rs  suggest.rs
src/format/: mod.rs
tests/: categories_test.rs  cli_test.rs  client_branches_test.rs  client_test.rs  commands_test.rs  config_test.rs  format_test.rs  integration_test.rs  main_cli_dispatch_test.rs  models_test.rs  scraper_branches_test.rs  scraper_test.rs
tests/fixtures/: nutrition_6879912.html  product_6879912.json  search_leite.html  stores.json  suggestions_leite.html
